# QEngine

./: .clangd  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  run  todo.md
editor/: CMakeLists.txt  XSP1-39.xresult  XSP1-39_results.csv  build.sh  build_status.json  clean_build.sh  debug.py  imgui.ini  kill_all_engines.sh  premake5.lua  run  run.sh  sample_results.csv  test.json
editor/.cache/clangd/index/: FA6FreeSolidFontData.h.D4E2E77BFE8E4D44.idx  IconsFontAwesome6.h.2C3EC10D1385F998.idx  Str.h.8AFB6880BDFE4968.idx  allocators.h.263E41A5F9ABE605.idx  asset_browser.cpp.FB22D2FBCA8AEB14.idx  asset_browser.h.0BE6ECB53106C3F9.idx  biginteger.h.DD1BB6B1530D25B1.idx  clzll.h.C1F6C38F82FE3010.idx  (+87 more)
editor/include/: logger.h
editor/include/_logger/: logger.h
editor/include/asset_browser/: asset_browser.h
editor/include/console/: console.h
editor/include/constants/: paths.h
editor/include/engine/: engine_communication.h  engine_controls.h  engine_event.h  engine_event_enter_play_mode.state.h
editor/include/entity/: entity_document.h  entity_list.h
editor/include/extras/: FA6FreeSolidFontData.h
editor/include/file_watcher/: file_w.h
editor/include/hierarchy/: hierarchy.h  theme.h
editor/include/logger/: logger.h
editor/include/path_resolver/: path_resolver.h
editor/include/resource_manager/: resource_manager.h
editor/include/test_manager/: test_manager.h
editor/include/test_viewer/: test_viewer.h
editor/include/utility/: singleton.h
editor/include/variant/: variant_document.h  variant_list.h
editor/include/window/: window_manager.h
editor/source/: main.cpp
editor/source/asset_browser/: asset_browser.cpp
editor/source/console/: console.cpp
editor/source/engine/: engine_communication.cpp  engine_controls.cpp
editor/source/entity/: entity_document.cpp  entity_list.cpp
editor/source/file_watcher/: file_w.cpp
editor/source/hierarchy/: hierarchy.cpp
editor/source/logger/: logger.cpp
editor/source/path_resolver/: path_resolver.cpp
editor/source/resource_manager/: resource_manager.cpp
editor/source/test_manager/: test_manager.cpp
editor/source/test_viewer/: test_viewer.cpp
editor/source/variant/: variant_document.cpp  variant_list.cpp
editor/source/window/: window_manager.cpp
editor/src/: main.cpp
editor/src/asset_browser/: asset_browser.cpp
editor/src/console/: console.cpp
editor/src/engine/: engine_communication.cpp  engine_controls.cpp
editor/src/entity/: entity_document.cpp  entity_list.cpp
editor/src/file_watcher/: file_w.cpp
editor/src/hierarchy/: hierarchy.cpp
editor/src/logger/: logger.cpp
editor/src/resource_manager/: resource_manager.cpp
editor/src/test_viewer/: test_viewer.cpp
editor/src/variant/: variant_document.cpp  variant_list.cpp
editor/src/window/: window_manager.cpp
editor/temp_backup/: Ball.entity  CoreGame.entity  Game.entity  Paddle.entity  Player.entity  Player1.entity  Player2.entity  Wall.entity  Wall3.entity  a.entity  test.entity  test1.entity
engine/: CMakeLists.txt  build.sh  build_web.sh  build_wrapper.sh  parser2.py  premake5.lua  run.sh  standalone_build.sh  windows_build.sh
engine/include/application/: application.h
engine/include/config_manager/: config_manager.h
engine/include/constants/: paths.h
engine/include/core/: macros.h  profiling.h  query.h  raylib_wrapper.h  scene.h  utils.h  zeytin.h
engine/include/editor/: editor_communication.h  editor_event.h
engine/include/entity/: entity.h
engine/include/file_watcher/: file_watcher.h
engine/include/game/: ball.h  brick.h  brick_manager.h  camera2d.h  collider.h  cube.h  game.h  paddle.h  position.h  rttr_registration.h  scale.h  score.h  speed.h  sprite.h  tag.h  velocity.h
engine/include/image_serializer/: image_serializer.h
engine/include/remote_logger/: remote_logger.h
engine/include/resource_manager/: resource_manager.h
engine/include/utility/: singleton.h
engine/include/variant/: variant_base.h  variant_macros.h
engine/scripts/: build.py  build.sh  build_with_status.py  build_wrapper.sh  clean.py  kill.py  parser.sh  parser2.py  run.py  run.sh  standalone_build.sh
engine/scripts/temp/: backup.scene
engine/source/: entry_point.cpp
engine/source/application/: application.cpp
engine/source/config_manager/: config_manager.cpp
engine/source/core/: scene.cpp  zeytin.cpp
engine/source/editor/: editor_communication.cpp
engine/source/file_watcher/: file_watcher.cpp
engine/source/game/: ball.cpp  brick.cpp  brick_manager.cpp  camera2d.cpp  collider.cpp  cube.cpp  game.cpp  game_state.cpp  paddle.cpp  score.cpp  sprite.cpp
engine/source/image_serializer/: image_serializer.cpp
engine/source/remote_logger/: remote_logger.cpp
engine/source/resource_manager/: resource_manager.cpp
engine/src/: entry_point.cpp
engine/src/application/: application.cpp
engine/src/config_manager/: config_manager.cpp
engine/src/core/: scene.cpp  zeytin.cpp
engine/src/editor/: editor_communication.cpp
engine/src/game/: ball.cpp  brick.cpp  camera2d.cpp  collider.cpp  cube.cpp  game.cpp  paddle.cpp  score.cpp  sprite.cpp
engine/src/remote_logger/: remote_logger.cpp
engine/src/resource_manager/: resource_manager.cpp
engine/temp/: backup.scene
engine/web/: template.html
engine/web_deploy/: Zeytin.data
runtime/: Makefile  y  (+15 more)
(+157 files in other folders)
